Fixing Omnibox action buttons

Fixing action buttons:
- Check if the location bar is in steady state.
  If yes, the Copy button is displayed.
  If not, if there is selected text the Copy button is displayed.
  In other cases, the Copy button is hidden.
- display Paste & Search for Copied Text buttons when omnibox is empty.
- hide Select & Select All buttons when omnibox is empty.
- display Select All button when selected text and hide Select button.

Corresponding integration tests dded.


Bug: 864984

Change-Id: I321546571272235eac0b749753f041bff0922608
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1786639
Commit-Queue: Ewann Pellé <ewannpv@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#705068}

Former-commit-id: 376aaade685ee05f5a9a4b8d8a0c1130860eb395